  . Fixed bug #70124 (null ptr deref / seg fault in ZEND_HANDLE_EXCEPTION).
    (Laruence)
  . Fixed bug #70117 (Unexpected return type error). (Laruence)
  . Fixed bug #70106 (Inheritance by anonymous class). (Bob)
  . Fixed bug #69674 (SIGSEGV array.c:953). (cmb)
  . Fixed bug #70164 (__COMPILER_HALT_OFFSET__ under namespace is not defined).
    (Bob))
  . Fixed Bug #70108 (sometimes empty $_SERVER['QUERY_STRING']). (Anatol)

- Curl:
  . Fixed bug #70163 (curl_setopt_array() type confusion). (Laruence)

- IMAP:
  . Fixed bug #70158 (Building with static imap fails). (cmb)

- Opcache:
  . Fixed bug #70111 (Segfault when a function uses both an explicit return
    type and an explicit cast). (Laruence)

- Phpdbg: 
  . Fixed bug #70138 (Segfault when displaying memory leaks). (Bob)

- Standard:
  . Fixed bug #70140 (str_ireplace/php_string_tolower - Arbitrary Code
  . Implemented #70112 (Allow "dirname" to go up various times). (Remi)
    Execution). (Laruence)
  . Fixed bug #36365 (scandir duplicates file name at every 65535th file). (cmb)

23 Jul 2015, PHP 7.0.0 Beta 2

- Core:
  . Fixed bug #70089 (segfault at ZEND_FETCH_DIM_W_SPEC_VAR_CONST_HANDLER ()).
    (Laruence)
  . Fixed bug #70057 (Build failure on 32-bit Mac OS X 10.6.8: recursive
    inlining). (Laruence)
  . Fixed bug #70012 (Exception lost with nested finally block). (Laruence)
  . Fixed bug #69996 (Changing the property of a cloned object affects the
    original). (Dmitry, Laruence)
  . Fixed bug #70083 (Use after free with assign by ref to overloaded objects).
    (Bob)

- Curl:
  . Fixed bug #70065 (curl_getinfo() returns corrupted values). (Anatol)

- GD:
  . Fixed bug #53156 (imagerectangle problem with point ordering). (cmb)
  . Fixed bug #66387 (Stack overflow with imagefilltoborder). (cmb)
  . Fixed bug #70102 (imagecreatefromwebm() shifts colors). (cmb)
  . Fixed bug #66590 (imagewebp() doesn't pad to even length). (cmb)